--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,6 +7,7 @@
   "close": "schließen",
   "drop here": "Wirf hier deine PDF Dateien herein",
   "pick file": "PDF-Datei auswählen",
+  "add file": "PDF-Datei hinzufügen",
   "download": "Herunterladen",
   "github link": "PDF-Tools auf github"
 }
