--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "close": "close",
   "drop here": "Drop in some PDF-Files",
   "pick file": "Pick a PDF-File",
+  "add file": "Add a PDF-File",
   "download": "Download",
   "github link": "PDF-Tools on github"
 }
